--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ terminado==0.6
 testpath==0.3.1
 tornado==4.5.1
 traitlets==4.3.2
+unicodecsv==0.14.1
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==2.0.0
